Fix layout issue where h1 overlapped menu icon on secondary pages at tablet size

--- a/htdocs/GRpriodas.css
+++ b/htdocs/GRpriodas.css
@@ -622,6 +622,10 @@ h2 {
     overflow: visible;
   }
   
+  .header .h1--small {
+    margin-left: 60px;
+  }
+  
   .header__nav {
     position: relative;
     display: none;
